--- a/chatgpt/src/App.css
+++ b/chatgpt/src/App.css
@@ -11,11 +11,29 @@
 }
 
 .sidemenu {
-  width: 240px;
+  width: 260px;
+  padding: 10px;
   border: 1px solid white;
   background: #202123;
 }
 
+.side-menu-button {
+  padding: 15px;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: left;
+  transition: ease 0.25s all;
+}
+
+.side-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+
+.side-menu-button:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
 .chatbox {
   flex: 1;
@@ -26,12 +44,6 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
