--- a/chatgpt/src/App.css
+++ b/chatgpt/src/App.css
@@ -10,10 +10,6 @@
   left: 0;
 }
 
-/* :root {
-  --bordercolor: rgb(134, 130, 130);
-} */
-
 .sidemenu {
   width: 260px;
   padding: 10px;
@@ -39,8 +35,6 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-
-/* chat box prompt*/
 .chat-input-holder {
   padding: 24px;
   position: absolute;
@@ -58,12 +52,9 @@
   border: none;
   color: white;
   font-size: 1.25em;
-  border-color: none;
-  /* margin: 12px; */
   outline: none;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
 }
-
 
 .chatbox {
   flex: 1;
@@ -102,27 +93,28 @@
   }
 }
 
-
-
 .chat-log {
-  padding: 24px;
+
   text-align: left;
-  display: flex;
-
-
 }
 
 .chat-message {
-  padding: 12px;
-  display: flex;
-  padding-left: 24px;
-  padding-right: 24px;
+
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.chat-message-center {
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  padding: 12px;
+  padding-left: 12px;
+  padding-right: 24px;
+  display: flex;
 }
 
-.chat-message-center .avatar {
+.avatar {
   background: white;
   border-radius: 50%;
   width: 40px;
@@ -130,6 +122,6 @@
 }
 
 .message {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
